# internal/api/definition/cube_sat_frame.go
@@ -1,0 +1,224 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package definition
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CubeSatFrame cube sat frame
+//
+// swagger:model CubeSatFrame
+type CubeSatFrame struct {
+
+	// height
+	// Required: true
+	Height *float64 `json:"height"`
+
+	// id
+	// Required: true
+	ID *int64 `json:"id"`
+
+	// length
+	// Required: true
+	Length *float64 `json:"length"`
+
+	// link
+	// Required: true
+	Link *string `json:"link"`
+
+	// mechanical shock
+	// Required: true
+	MechanicalShock *int64 `json:"mechanical_shock"`
+
+	// mechanical vibration
+	// Required: true
+	MechanicalVibration *int64 `json:"mechanical_vibration"`
+
+	// operating temperature max
+	// Required: true
+	OperatingTemperatureMax *int64 `json:"operating_temperature_max"`
+
+	// operating temperature min
+	// Required: true
+	OperatingTemperatureMin *int64 `json:"operating_temperature_min"`
+
+	// weight
+	// Required: true
+	Weight *int64 `json:"weight"`
+
+	// width
+	// Required: true
+	Width *float64 `json:"width"`
+}
+
+// Validate validates this cube sat frame
+func (m *CubeSatFrame) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateHeight(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLength(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLink(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMechanicalShock(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMechanicalVibration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOperatingTemperatureMax(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOperatingTemperatureMin(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateWeight(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateWidth(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CubeSatFrame) validateHeight(formats strfmt.Registry) error {
+
+	if err := validate.Required("height", "body", m.Height); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateLength(formats strfmt.Registry) error {
+
+	if err := validate.Required("length", "body", m.Length); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateLink(formats strfmt.Registry) error {
+
+	if err := validate.Required("link", "body", m.Link); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateMechanicalShock(formats strfmt.Registry) error {
+
+	if err := validate.Required("mechanical_shock", "body", m.MechanicalShock); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateMechanicalVibration(formats strfmt.Registry) error {
+
+	if err := validate.Required("mechanical_vibration", "body", m.MechanicalVibration); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateOperatingTemperatureMax(formats strfmt.Registry) error {
+
+	if err := validate.Required("operating_temperature_max", "body", m.OperatingTemperatureMax); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateOperatingTemperatureMin(formats strfmt.Registry) error {
+
+	if err := validate.Required("operating_temperature_min", "body", m.OperatingTemperatureMin); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateWeight(formats strfmt.Registry) error {
+
+	if err := validate.Required("weight", "body", m.Weight); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *CubeSatFrame) validateWidth(formats strfmt.Registry) error {
+
+	if err := validate.Required("width", "body", m.Width); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this cube sat frame based on context it is used
+func (m *CubeSatFrame) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CubeSatFrame) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CubeSatFrame) UnmarshalBinary(b []byte) error {
+	var res CubeSatFrame
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
