# internal/api/server/restapi/api/create_cube_sat_frame.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+
+	models "github.com/Maksim646/space_vpx_satellite/internal/api/definition"
+)
+
+// CreateCubeSatFrameHandlerFunc turns a function with the right signature into a create cube sat frame handler
+type CreateCubeSatFrameHandlerFunc func(CreateCubeSatFrameParams, *models.Principal) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn CreateCubeSatFrameHandlerFunc) Handle(params CreateCubeSatFrameParams, principal *models.Principal) middleware.Responder {
+	return fn(params, principal)
+}
+
+// CreateCubeSatFrameHandler interface for that can handle valid create cube sat frame params
+type CreateCubeSatFrameHandler interface {
+	Handle(CreateCubeSatFrameParams, *models.Principal) middleware.Responder
+}
+
+// NewCreateCubeSatFrame creates a new http.Handler for the create cube sat frame operation
+func NewCreateCubeSatFrame(ctx *middleware.Context, handler CreateCubeSatFrameHandler) *CreateCubeSatFrame {
+	return &CreateCubeSatFrame{Context: ctx, Handler: handler}
+}
+
+/*
+	CreateCubeSatFrame swagger:route POST /cube_sat_frame CubeSateFrame createCubeSatFrame
+
+Create Cube Sat Frame
+*/
+type CreateCubeSatFrame struct {
+	Context *middleware.Context
+	Handler CreateCubeSatFrameHandler
+}
+
+func (o *CreateCubeSatFrame) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewCreateCubeSatFrameParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principal
+	if uprinc != nil {
+		principal = uprinc.(*models.Principal) // this is really a models.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
